# cudatest

./: CMakeLists.txt  Makefile  cuda.cu  cuda_kernels.h  exam.cpp  main.cpp  mandel.cpp  mandel.h  mandelcuda.cu
